# Base_Cpp_Project_Template

./: README.md
build_exercise_proj/: CMakeLists.txt
build_exercise_proj/include/build_exercise_proj/: header.hpp
build_exercise_proj/libs/: CMakeLists.txt
build_exercise_proj/libs/tools_lib_proj/: CMakeLists.txt
build_exercise_proj/libs/tools_lib_proj/src/: tools.cpp
build_exercise_proj/src/: main.cpp
